--- a/3-Modelo_Mensajes_Tiempo_Virtual_Historia/index.html
+++ b/3-Modelo_Mensajes_Tiempo_Virtual_Historia/index.html
@@ -13,7 +13,7 @@
 
   <a-scene background="color: #B3EDFF">
 
-    <a-box id="miReloj" mensaje="posicionOrigen: -2 0 0; posicionDestino: 0 10 6; tiempoOrigen: 2; tiempoDestino: 15" reloj historia
+    <a-box mensaje="posicionOrigen: -2 0 0; posicionDestino: 0 10 6; tiempoOrigen: 2; tiempoDestino: 15" reloj historia
       color="#b0b0b0" 
       position="-2 0 0" 
       material="side: front">
